# chlorium-daw

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/app/: Cargo.toml
crates/app/src/: app.rs  chlorium_theme.rs  discord_rpc.rs  lib.rs  utils.rs
crates/app/src/components/: about_chlorium.rs
crates/app/src/traits/: mod.rs  panel.rs  view.rs
crates/app/src/widgets/: about_chlorium.rs  tracker_channel.rs
crates/core/: Cargo.toml
crates/core/src/: audio_engine.rs  lib.rs
crates/main/: Cargo.toml
crates/main/src/: main.rs
src/: app.rs  chlorium_theme.rs  components.rs  main.rs  ui_utils.rs  utils.rs
src/components/: about_chlorium.rs
src/traits/: view.rs
